# polymarket-trading-bot

./: .env.example  .gitignore  Makefile  pyproject.toml
bot/: __init__.py  config.py  hourly_market.py  i18n.py  keyboards.py  main.py  polymarket_client.py
bot/abi/: ctf_abi.py  pusd_abi.py  usdc_abi.py
